--- a/index.html
+++ b/index.html
@@ -14,17 +14,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Playfair+Display:wght@700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/styles.css">
-  <style>.ornament { position:absolute; right:-200px; top:-120px; width:560px; height:560px; filter:blur(40px); opacity:.25;
+  <style>
+    .ornament{
+      position:absolute; right:-200px; top:-120px; width:560px; height:560px; filter:blur(40px); opacity:.25;
       background: conic-gradient(from 45deg, #F6D56B, #B97A13, #d94141, #F6D56B);
-      border-radius:50%; box-shadow: inset 0 0 120px rgba(0,0,0,.35); }</style>
+      border-radius:50%; box-shadow: inset 0 0 120px rgba(0,0,0,.35);
+    }
+  </style>
 </head>
 <body>
-  <nav class="nav">
+  <!-- NAV -->
+  <nav class="nav" role="navigation" aria-label="Главная навигация">
     <div class="container nav-inner">
-      <div class="brand"><img src="assets/img/logo-pcp.svg" alt="pcp" height="40" style="height:40px"></div>
+      <a class="brand" href="#" aria-label="pcp home">
+        <img src="assets/img/logo-pcp.svg" alt="pcp" height="40" style="height:40px">
+      </a>
 
-      <!-- гамбургер для мобильной навигации -->
-      <button class="m-nav-toggle" aria-label="Открыть меню" aria-expanded="false">☰</button>
+      <!-- гамбургер для мобильной навигации (скрыт на десктопе через CSS) -->
+      <button class="m-nav-toggle" type="button" aria-label="Меню" aria-expanded="false">☰</button>
 
       <div class="links">
         <a href="#about" data-i18n="nav_about"></a>
@@ -32,14 +39,15 @@
         <a href="#industries" data-i18n="nav_industries"></a>
         <a href="#catalog">Каталог</a>
         <a href="#contact" data-i18n="nav_contact"></a>
-        <span class="lang-switch">
-          <button data-lang="ru" onclick="pcpSetLang('ru')">RU</button>
-          <button data-lang="uz" onclick="pcpSetLang('uz')">UZ</button>
+        <span class="lang-switch" role="group" aria-label="Переключение языка">
+          <button type="button" data-lang="ru" onclick="pcpSetLang('ru')">RU</button>
+          <button type="button" data-lang="uz" onclick="pcpSetLang('uz')">UZ</button>
         </span>
       </div>
     </div>
   </nav>
 
+  <!-- HERO -->
   <header class="hero">
     <div class="ornament"></div>
     <div class="container hero-grid">
@@ -58,115 +66,137 @@
           <div class="glass stat reveal"><div class="num" data-counter="60">0</div><div class="lbl" data-i18n="stats_partners"></div></div>
         </div>
       </div>
+
       <div class="card-mosaic">
-        <div class="glass mini reveal"><img class="icon" src="assets/icons/shield.svg" alt="shield"><div><strong data-i18n="hero_m1_t"></strong><br><span data-i18n="hero_m1_d"></span></div></div>
-        <div class="glass mini reveal"><img class="icon" src="assets/icons/check-badge.svg" alt="badge"><div><strong data-i18n="hero_m2_t"></strong><br><span data-i18n="hero_m2_d"></span></div></div>
-        <div class="glass mini reveal"><img class="icon" src="assets/icons/leaf.svg" alt="eco"><div><strong>ESG</strong><br><span>Eco-friendly materials</span></div></div>
-        <div class="glass mini reveal"><img class="icon" src="assets/icons/globe.svg" alt="globe"><div><strong>Global</strong><br><span>Worldwide logistics</span></div></div>
+        <div class="glass mini reveal">
+          <img class="icon" src="assets/icons/shield.svg" alt="" aria-hidden="true">
+          <div><strong data-i18n="hero_m1_t"></strong><br><span data-i18n="hero_m1_d"></span></div>
+        </div>
+        <div class="glass mini reveal">
+          <img class="icon" src="assets/icons/check-badge.svg" alt="" aria-hidden="true">
+          <div><strong data-i18n="hero_m2_t"></strong><br><span data-i18n="hero_m2_d"></span></div>
+        </div>
+        <div class="glass mini reveal">
+          <img class="icon" src="assets/icons/leaf.svg" alt="" aria-hidden="true">
+          <div><strong>ESG</strong><br><span>Eco-friendly materials</span></div>
+        </div>
+        <div class="glass mini reveal">
+          <img class="icon" src="assets/icons/globe.svg" alt="" aria-hidden="true">
+          <div><strong>Global</strong><br><span>Worldwide logistics</span></div>
+        </div>
       </div>
     </div>
   </header>
 
-  <section id="about" class="section"><div class="container">
-    <h2 data-i18n="about_h2"></h2>
-    <p class="intro" data-i18n="about_p"></p>
-  </div></section>
-
-  <section id="products" class="section"><div class="container">
-    <h2 data-i18n="products_h2"></h2>
-    <p class="intro" data-i18n="products_p"></p>
-    <div class="grid-3" style="margin-top:18px">
-      <article class="glass card reveal"><img class="icon" src="assets/icons/gear.svg" alt="gear"><h3 data-i18n="pr1_t"></h3><p data-i18n="pr1_d"></p></article>
-      <article class="glass card reveal"><img class="icon" src="assets/icons/conveyor.svg" alt="pipe"><h3 data-i18n="pr2_t"></h3><p data-i18n="pr2_d"></p></article>
-      <article class="glass card reveal"><img class="icon" src="assets/icons/robot-arm.svg" alt="automation"><h3 data-i18n="pr3_t"></h3><p data-i18n="pr3_d"></p></article>
-      <article class="glass card reveal"><img class="icon" src="assets/icons/leaf.svg" alt="filters"><h3 data-i18n="pr4_t"></h3><p data-i18n="pr4_d"></p></article>
-      <article class="glass card reveal"><img class="icon" src="assets/icons/shield.svg" alt="safety"><h3 data-i18n="pr5_t"></h3><p data-i18n="pr5_d"></p></article>
-      <article class="glass card reveal"><img class="icon" src="assets/icons/truck.svg" alt="truck"><h3 data-i18n="pr6_t"></h3><p data-i18n="pr6_d"></p></article>
+  <!-- ABOUT -->
+  <section id="about" class="section">
+    <div class="container">
+      <h2 data-i18n="about_h2"></h2>
+      <p class="intro" data-i18n="about_p"></p>
     </div>
-  </div></section>
+  </section>
 
-  <section id="industries" class="section"><div class="container">
-    <h2 data-i18n="industries_h2"></h2>
-    <p class="intro" data-i18n="industries_p"></p>
-    <div class="grid-4" style="margin-top:18px">
-      <div class="glass card reveal"><h3 data-i18n="ind_energy"></h3><p>CCGT, CHP, boiler houses</p></div>
-      <div class="glass card reveal"><h3 data-i18n="ind_mining"></h3><p>Concentrators, tailings</p></div>
-      <div class="glass card reveal"><h3 data-i18n="ind_oilgas"></h3><p>Gathering, pipelines</p></div>
-      <div class="glass card reveal"><h3 data-i18n="ind_chem"></h3><p>Acids, solvents, polymers</p></div>
-      <div class="glass card reveal"><h3 data-i18n="ind_build"></h3><p>HVAC, fire water</p></div>
-      <div class="glass card reveal"><h3 data-i18n="ind_water"></h3><p>WTP, desalination</p></div>
-    </div>
-    <div class="section" style="padding-top:28px">
-      <h2 data-i18n="adv_h2"></h2>
-      <div class="list" style="margin-top:12px">
-        <div class="li reveal"><div class="dot"></div><div data-i18n="adv1"></div></div>
-        <div class="li reveal"><div class="dot"></div><div data-i18n="adv2"></div></div>
-        <div class="li reveal"><div class="dot"></div><div data-i18n="adv3"></div></div>
-        <div class="li reveal"><div class="dot"></div><div data-i18n="adv4"></div></div>
+  <!-- PRODUCTS -->
+  <section id="products" class="section">
+    <div class="container">
+      <h2 data-i18n="products_h2"></h2>
+      <p class="intro" data-i18n="products_p"></p>
+      <div class="grid-3" style="margin-top:18px">
+        <article class="glass card reveal"><img class="icon" src="assets/icons/gear.svg" alt="" aria-hidden="true"><h3 data-i18n="pr1_t"></h3><p data-i18n="pr1_d"></p></article>
+        <article class="glass card reveal"><img class="icon" src="assets/icons/conveyor.svg" alt="" aria-hidden="true"><h3 data-i18n="pr2_t"></h3><p data-i18n="pr2_d"></p></article>
+        <article class="glass card reveal"><img class="icon" src="assets/icons/robot-arm.svg" alt="" aria-hidden="true"><h3 data-i18n="pr3_t"></h3><p data-i18n="pr3_d"></p></article>
+        <article class="glass card reveal"><img class="icon" src="assets/icons/leaf.svg" alt="" aria-hidden="true"><h3 data-i18n="pr4_t"></h3><p data-i18n="pr4_d"></p></article>
+        <article class="glass card reveal"><img class="icon" src="assets/icons/shield.svg" alt="" aria-hidden="true"><h3 data-i18n="pr5_t"></h3><p data-i18n="pr5_d"></p></article>
+        <article class="glass card reveal"><img class="icon" src="assets/icons/truck.svg" alt="" aria-hidden="true"><h3 data-i18n="pr6_t"></h3><p data-i18n="pr6_d"></p></article>
       </div>
     </div>
-    <div class="section" style="padding-top:14px">
-      <h2 data-i18n="partners_h2"></h2>
-      <div class="partners">
-        <div class="glass partner">Aurum</div>
-        <div class="glass partner">UraniumTech</div>
-        <div class="glass partner">HydroFlow</div>
-        <div class="glass partner">ChemCore</div>
-        <div class="glass partner">Steel&Co</div>
-        <div class="glass partner">GlobalPipe</div>
+  </section>
+
+  <!-- INDUSTRIES -->
+  <section id="industries" class="section">
+    <div class="container">
+      <h2 data-i18n="industries_h2"></h2>
+      <p class="intro" data-i18n="industries_p"></p>
+      <div class="grid-4" style="margin-top:18px">
+        <div class="glass card reveal"><h3 data-i18n="ind_energy"></h3><p>CCGT, CHP, boiler houses</p></div>
+        <div class="glass card reveal"><h3 data-i18n="ind_mining"></h3><p>Concentrators, tailings</p></div>
+        <div class="glass card reveal"><h3 data-i18n="ind_oilgas"></h3><p>Gathering, pipelines</p></div>
+        <div class="glass card reveal"><h3 data-i18n="ind_chem"></h3><p>Acids, solvents, polymers</p></div>
+        <div class="glass card reveal"><h3 data-i18n="ind_build"></h3><p>HVAC, fire water</p></div>
+        <div class="glass card reveal"><h3 data-i18n="ind_water"></h3><p>WTP, desalination</p></div>
+      </div>
+
+      <div class="section" style="padding-top:28px">
+        <h2 data-i18n="adv_h2"></h2>
+        <div class="list" style="margin-top:12px">
+          <div class="li reveal"><div class="dot"></div><div data-i18n="adv1"></div></div>
+          <div class="li reveal"><div class="dot"></div><div data-i18n="adv2"></div></div>
+          <div class="li reveal"><div class="dot"></div><div data-i18n="adv3"></div></div>
+          <div class="li reveal"><div class="dot"></div><div data-i18n="adv4"></div></div>
+        </div>
+      </div>
+
+      <div class="section" style="padding-top:14px">
+        <h2 data-i18n="partners_h2"></h2>
+        <div class="partners">
+          <div class="glass partner">Aurum</div>
+          <div class="glass partner">UraniumTech</div>
+          <div class="glass partner">HydroFlow</div>
+          <div class="glass partner">ChemCore</div>
+          <div class="glass partner">Steel&Co</div>
+          <div class="glass partner">GlobalPipe</div>
+        </div>
       </div>
     </div>
-  </div></section>
+  </section>
 
-  <section id="catalog" class="section"><div class="container">
-    <h2>Каталог / Katalog</h2>
-    <p class="intro">Выберите направление — карточка откроет форму с предзаполненным запросом.</p>
-    <div class="grid-4" style="margin-top:18px">
-      <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Запорная арматура"><img src="assets/img/products/valve.svg" alt="valve"><h3>Запорная арматура</h3><p>Краны, задвижки, клапаны</p></a>
-      <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Трубные системы"><img src="assets/img/products/pipe.svg" alt="pipe"><h3>Трубные системы</h3><p>Трубы, отводы, фитинги</p></a>
-      <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Автоматизация"><img src="assets/img/products/actuator.svg" alt="actuator"><h3>Автоматизация</h3><p>Приводы, позиционеры</p></a>
-      <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Фильтры и сепараторы"><img src="assets/img/products/filter.svg" alt="filter"><h3>Фильтры и сепараторы</h3><p>Y-фильтры, циклоны</p></a>
-      <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Грубой очистки (Strainer)"><img src="assets/img/products/strainer.svg" alt="strainer"><h3>Грубой очистки</h3><p>Корпусные фильтры</p></a>
-      <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Предохранительные устройства"><img src="assets/img/products/safety.svg" alt="safety"><h3>Безопасность</h3><p>PSV, датчики</p></a>
-      <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Фланцы"><img src="assets/img/products/flange.svg" alt="flange"><h3>Фланцы</h3><p>PN16–PN160</p></a>
-      <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Прокладки"><img src="assets/img/products/gasket.svg" alt="gasket"><h3>Прокладки</h3><p>Спирально-навитые и др.</p></a>
+  <!-- CATALOG -->
+  <section id="catalog" class="section">
+    <div class="container">
+      <h2>Каталог / Katalog</h2>
+      <p class="intro">Выберите направление — карточка откроет форму с предзаполненным запросом.</p>
+      <div class="grid-4" style="margin-top:18px">
+        <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Запорная арматура"><img src="assets/img/products/valve.svg" alt="" aria-hidden="true"><h3>Запорная арматура</h3><p>Краны, задвижки, клапаны</p></a>
+        <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Трубные системы"><img src="assets/img/products/pipe.svg" alt="" aria-hidden="true"><h3>Трубные системы</h3><p>Трубы, отводы, фитинги</p></a>
+        <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Автоматизация"><img src="assets/img/products/actuator.svg" alt="" aria-hidden="true"><h3>Автоматизация</h3><p>Приводы, позиционеры</p></a>
+        <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Фильтры и сепараторы"><img src="assets/img/products/filter.svg" alt="" aria-hidden="true"><h3>Фильтры и сепараторы</h3><p>Y-фильтры, циклоны</p></a>
+        <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Грубой очистки (Strainer)"><img src="assets/img/products/strainer.svg" alt="" aria-hidden="true"><h3>Грубой очистки</h3><p>Корпусные фильтры</p></a>
+        <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Предохранительные устройства"><img src="assets/img/products/safety.svg" alt="" aria-hidden="true"><h3>Безопасность</h3><p>PSV, датчики</p></a>
+        <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Фланцы"><img src="assets/img/products/flange.svg" alt="" aria-hidden="true"><h3>Фланцы</h3><p>PN16–PN160</p></a>
+        <a class="glass card reveal" href="#contact" data-prefill="Запрос КП: Прокладки"><img src="assets/img/products/gasket.svg" alt="" aria-hidden="true"><h3>Прокладки</h3><p>Спирально-навитые и др.</p></a>
+      </div>
     </div>
-  </div></section>
+  </section>
 
-  <section id="contact" class="section"><div class="container">
-    <h2 data-i18n="contact_h2"></h2>
-    <p class="intro" data-i18n="contact_p"></p>
-    <form id="contact-form" class="form" autocomplete="on">
-      <input class="input" name="name" type="text" data-i18n-ph="name" required>
-      <input class="input" name="phone" type="tel" data-i18n-ph="phone" required>
-      <textarea class="" name="msg" data-i18n-ph="message" required></textarea>
-      <button class="btn gold" type="submit" style="width:max-content"><span data-i18n="send"></span></button>
-      <div id="notice"></div>
-    </form>
-    <p style="margin-top:10px;color:#f3cdd3"><span class="kbd">Tip</span> — нажмите <span class="kbd">RU</span> / <span class="kbd">UZ</span>, чтобы переключить язык.</p>
-  </div></section>
+  <!-- CONTACT -->
+  <section id="contact" class="section">
+    <div class="container">
+      <h2 data-i18n="contact_h2"></h2>
+      <p class="intro" data-i18n="contact_p"></p>
+      <form id="contact-form" class="form" autocomplete="on">
+        <input class="input" name="name" type="text" data-i18n-ph="name" required>
+        <input class="input" name="phone" type="tel" data-i18n-ph="phone" required>
+        <textarea name="msg" data-i18n-ph="message" required></textarea>
+        <button class="btn gold" type="submit" style="width:max-content"><span data-i18n="send"></span></button>
+        <div id="notice" role="status" aria-live="polite"></div>
+      </form>
+      <p style="margin-top:10px;color:#f3cdd3"><span class="kbd">Tip</span> — нажмите <span class="kbd">RU</span> / <span class="kbd">UZ</span>, чтобы переключить язык.</p>
+    </div>
+  </section>
 
-  <section class="section" style="padding-top:0"><div class="container grid-4">
-    <div class="glass card"><h3>Адрес</h3><p>г. Навои, Узбекистан</p></div>
-    <div class="glass card"><h3>Телефон</h3><p><a href="tel:+998900000000">+998 (90) 000-00-00</a></p></div>
-    <div class="glass card"><h3>E-mail</h3><p><a href="mailto:sales@pcp.com">sales@pcp.com</a></p></div>
-    <div class="glass card"><h3>Telegram</h3><p><a href="https://t.me/pcp_industry" target="_blank">@pcp_industry</a></p></div>
-  </div></section>
+  <!-- FOOTER -->
+  <section class="section" style="padding-top:0">
+    <div class="container grid-4">
+      <div class="glass card"><h3>Адрес</h3><p>г. Навои, Узбекистан</p></div>
+      <div class="glass card"><h3>Телефон</h3><p><a href="tel:+998900000000">+998 (90) 000-00-00</a></p></div>
+      <div class="glass card"><h3>E-mail</h3><p><a href="mailto:sales@pcp.com">sales@pcp.com</a></p></div>
+      <div class="glass card"><h3>Telegram</h3><p><a href="https://t.me/pcp_industry" target="_blank" rel="noopener">@pcp_industry</a></p></div>
+    </div>
+  </section>
 
   <footer><div class="container" data-i18n="footer"></div></footer>
 
+  <!-- Scripts -->
   <script src="assets/js/app.js"></script>
-  <!-- небольшой inline-скрипт, если у тебя ещё нет обработчика в app.js -->
-  <script>
-    (function(){
-      const btn = document.querySelector(".m-nav-toggle");
-      const links = document.querySelector(".nav .links");
-      if(!btn || !links) return;
-      btn.addEventListener("click", ()=>{
-        const open = links.classList.toggle("show");
-        btn.setAttribute("aria-expanded", open ? "true" : "false");
-      });
-      links.querySelectorAll("a").forEach(a=> a.addEventListener("click", ()=> links.classList.remove("show")));
-    })();
-  </script>
-</body></html>
+</body>
+</html>
